templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:latest
          ports:
            - containerPort: 3000
              name: gitea-http
            - containerPort: 22
              name: git-ssh
          volumeMounts:
            - mountPath: /data
              name: gitea-volume
      volumes:
        - name: gitea-volume
          persistentVolumeClaim:
            claimName: gitea-pvc
