templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
spec:
  selector:
    app: gitea-selector
  ports:
    - name: gitea-http
      port: 3000
      targetPort: 3000
      nodePort: 30003
    - name: gitea-ssh
      port: 22
      targetPort: 22
      nodePort: 32222
  type: NodePort
